--    Copyright (C) 2018  Marcin Chmiel <marcin.k.chmiel@gmail.com>
--
--    This program is free software: you can redistribute it and/or modify
--    it under the terms of the GNU General Public License as published by
--    the Free Software Foundation, either version 3 of the License, or
--    (at your option) any later version.
--
--    This program is distributed in the hope that it will be useful,
--    but WITHOUT ANY WARRANTY; without even the implied warranty of
--    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
--    GNU General Public License for more details.
--
--    You should have received a copy of the GNU General Public License
--    along with this program.  If not, see <https://www.gnu.org/licenses/>.


name:                hs-mir
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-mir#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Esac
                     , Data.Esac.Parser
                     , Data.Esac.Converter
                     , Data.Midi
                     , Data.Midi.Parser
                     , Server
                     , Storage.Db
  build-depends:       HCodecs
                     , aeson >= 1.1.2.0
                     , base >= 4.7 && < 5
                     , base64-bytestring
                     , bson
                     , bytestring
                     , containers >= 0.5.7.1
                     , http-types
                     , mongoDB
                     , mtl
                     , parsec
                     , scotty
                     , text
                     , transformers >= 0.5.2.0
                     , unordered-containers >= 0.2.8.0
                     , wai-extra
  default-language:    Haskell2010

executable hs-mir-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-mir
  default-language:    Haskell2010

test-suite hs-mir-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bson
                     , mtl
                     , hs-mir
                     , HCodecs
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-mir
